--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </thead>
     </table>
     <script>
-
+alert('Hola Mundo')
         async function agregarContacto() {
             cont = {}
             cont.nombre = document.getElementById('nombre').value;
