--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ alert('Hola Mundo')
                 console.log("no hay datos")
             }
         }
-    
+    alert('Hola Mundo al final del script')
     </script>
   </div>
   <footer>
